k8slearn/5.Kubernetes 网络/5.4.Ingress/Manifest/3.Ingress-myapp.yaml
# Ingress-myapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
spec:
  ingressClassName: external-lb # 上面定义的 IngressClass 对象名称
  defaultBackend:
    service:
      name: myapp
      port:
        number: 80
